# EQPro-v4.2-beta

./: .gitignore  CMakeLists.txt  README.md
.cursor/: rules.md
JUCE/modules/juce_audio_plugin_client/: juce_audio_plugin_client_Standalone.cpp
JUCE/modules/juce_audio_plugin_client/Standalone/: juce_StandaloneFilterWindow.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: AnalyzerTap.cpp  AnalyzerTap.h  Biquad.h  EQBand.h  EQDSP.cpp  EQDSP.h  EqEngine.cpp  EqEngine.h  LinearPhaseEQ.h  MeteringDSP.h  OnePole.cpp  OnePole.h  ParamSnapshot.h  SpectralDynamicsDSP.h
Source/ui/: AnalyzerComponent.cpp  AnalyzerComponent.h  BandControlsPanel.cpp  BandControlsPanel.h  CorrelationComponent.cpp  SpectralDynamicsPanel.cpp  SpectralDynamicsPanel.h
Source/util/: ColorUtils.cpp  FFTUtils.h  RingBuffer.cpp  RingBuffer.h  Version.h
docs/: API.md  ARCHITECTURE.md  DIAGRAMS.md  GUI.md  MODULES.md  PARAMS.md  REALTIME_RULES.md  SIGNAL_FLOW.md
installer/: EQPro.iss
resources/: EQProVersion.rc.in
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: AnalyzerTap.h  Biquad.cpp  Biquad.h  EQBand.h  EQDSP.cpp  EQDSP.h  EllipticDSP.cpp  EllipticDSP.h  EqEngine.cpp  EqEngine.h  LinearPhaseEQ.cpp  LinearPhaseEQ.h  MeterTap.cpp  MeterTap.h  MeteringDSP.cpp  MeteringDSP.h  OnePole.cpp  OnePole.h  ParamSnapshot.h  SpectralDynamicsDSP.cpp  SpectralDynamicsDSP.h
src/ui/: AnalyzerComponent.cpp  AnalyzerComponent.h  BandControlsPanel.cpp  BandControlsPanel.h  CorrelationComponent.cpp  CorrelationComponent.h  EllipticPanel.cpp  EllipticPanel.h  LookAndFeel.cpp  LookAndFeel.h  MetersComponent.cpp  MetersComponent.h  SpectralDynamicsPanel.cpp  SpectralDynamicsPanel.h  Theme.h
src/util/: ChannelLayoutUtils.cpp  ChannelLayoutUtils.h  ColorUtils.cpp  ColorUtils.h  FFTUtils.h  ParamIDs.cpp  ParamIDs.h  RingBuffer.cpp  RingBuffer.h  Smoothing.h  Version.h
tools/: safe-build.ps1
